--- a/public/views/viewExercise.html
+++ b/public/views/viewExercise.html
@@ -1,27 +1,24 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-    <meta name="viewport" content="width=360, initial-scale=1, maximum-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>GymBuddy - Workout Planning Made Easy</title>
+    <link rel="icon" type="image/gif" href="./images/favicon.png"/>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet'  type='text/css'>
     <link href="./vendors/bootstrap.min.css" rel="stylesheet">
     <link href="./style/style.css" rel="stylesheet">
     <script src="./vendors/angular.min.js" charset="utf-8"></script>
     <script src="./scripts/client.js" charset="utf-8"></script>
 </head>
-
 <body ng-app="myApp">
     <div ng-controller="viewExerciseController">
-    <div class="container">
-        <div class="jumbotron">
-            <h1>GymBuddy</h1>
+      <div class="jumbotron jumbotron-fluid text-center">
+        <div class="container">
+          <h1>GymBuddy</h1>
         </div>
-          <div>
+      </div>
           <h1>View Exercise XYZ </h1>
-            <button type="button" name="button" ng-click="home()"> Home </button>
+            <input  class="btn btn-danger" type="button" name="button" ng-click="home()" value="Home"/>
         </div>
-    </div>
-  </div>
 </body>
-
 </html>
