--- a/public/views/viewWorkout.html
+++ b/public/views/viewWorkout.html
@@ -1,24 +1,23 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-    <meta name="viewport" content="width=360, initial-scale=1, maximum-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>GymBuddy - Workout Planning Made Easy</title>
+    <link rel="icon" type="image/gif" href="./images/favicon.png" />
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet'  type='text/css'>
     <!-- <link rel="stylesheet" href="/node_modules/angular-material/angular-material.css"> -->
     <link href="./vendors/bootstrap.min.css" rel="stylesheet">
     <link href="./style/style.css" rel="stylesheet">
     <script src="./vendors/angular.min.js" charset="utf-8"></script>
     <script src="./scripts/client.js" charset="utf-8"></script>
-
-
 </head>
-
 <body ng-app="myApp">
     <div ng-controller="viewWorkoutController" ng-init="selectedWorkout()">
-    <div class="container">
-        <div class="jumbotron">
-            <h1>GymBuddy</h1>
+      <div class="jumbotron jumbotron-fluid text-center">
+        <div class="container">
+          <h1>GymBuddy</h1>
         </div>
+      </div>
             <!-- <script src="/node_modules/angular/angular.js"></script>
             <script src="/node_modules/angular-aria/angular-aria.js"></script>
             <script src="/node_modules/angular-animate/angular-animate.js"></script>
@@ -38,9 +37,7 @@
             <p> This page should display the specific workout that was selected in
               a tab that would enable user to select day view and exercise for day using "selected
               workout id:" </p>
-
-            <button type="button" name="button" ng-click="home()"> Home </button>
-        </div>
+            <input class="btn btn-danger navbar-btn" type="button" name="button" ng-click="home()" value="Home"/>
     </div>
 </body>
 </html>
