--- a/public/views/getStarted.html
+++ b/public/views/getStarted.html
@@ -6,6 +6,8 @@
     <title>GymBuddy - Workout Planning Made Easy</title>
     <link rel="icon" type="image/gif" href="./images/favicon.png" />
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet'  type='text/css'>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link href="./vendors/bootstrap.min.css" rel="stylesheet">
     <link href="./style/style.css" rel="stylesheet">
     <script src="./vendors/angular.min.js" charset="utf-8"></script>
@@ -22,27 +24,67 @@
         <div>
             <label for="Create Workout"></label>
             <input class="btn btn-default btn-lg btn-block navbar-btn" type="button" name="createWorkout" value="Create Workout" ng-model="createWorkout" ng-click="createWorkout()"/>
+
             <label for="Create Exercise"></label>
             <input class="btn btn-default btn-lg btn-block navbar-btn" type="button" name="createExercise" value="Create Exercise" ng-model="createExercise" ng-click="createExercise()"/>
+
             <label for="View Workout"></label>
-            <input class="btn btn-default btn-lg btn-block navbar-btn" type="button" name="viewWorkout" value="View Workout" ng-model="viewWorkout" ng-click="viewWorkout()"/>
+            <input data-toggle="modal" data-target="#workoutModal" class="btn btn-default btn-lg btn-block navbar-btn" type="button" name="viewWorkout" value="View Workout" ng-model="viewWorkout" ng-click="viewWorkout()"/>
+            <div id="workoutModal" class="modal fade" role="dialog">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                      <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Workouts</h4>
+                      </div>
+                      <div class="modal-body">
+                        <div ng-repeat='workout in workouts' >
+                            <img ng-src="{{workout.imageUrl}}"/>
+                            {{workout.name}}
+                            {{workout.description}}
+                            <input  class="btn btn-default navbar-btn" type="button" name="button" ng-click="setActive($index)" value="Select"/>
+                        </div>
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
             <label for="View Exercise"></label>
-            <input class="btn btn-default btn-lg btn-block navbar-btn" type="button" name="viewExercise" value="View Exercise" ng-model="viewExercise" ng-click="viewExercise()"/>
+            <input data-toggle="modal" data-target="#exerciseModal" class="btn btn-default btn-lg btn-block navbar-btn" type="button" name="viewExercise" value="View Exercise" ng-model="viewExercise" ng-click="viewExercise()"/>
+            <div id="exerciseModal" class="modal fade" role="dialog">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                      <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Exercise</h4>
+                      </div>
+                      <div class="modal-body">
+                        <div ng-repeat='exercise in exercises'>
+                            <img ng-src="{{exercise.imageUrl}}"/>
+                            {{exercise.name}}
+                            {{exercise.description}}
+                            <input class="btn btn-default navbar-btn" type="button" name="button" ng-click="selectExercise()" value="Select"/>
+                        </div>
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+
             <label for="Search For Exercise"></label>
             <input class="btn btn-default btn-lg btn-block navbar-btn" type="button" name="searchForExercise" value="Search For Exercise" ng-model="searchForExercise" ng-click="searchForExercise()"/>
         </div>
-            <div ng-repeat='workout in workouts' >
-                <img ng-src="{{workout.imageUrl}}"/>
-                {{workout.name}}
-                {{workout.description}}
-                <input  class="btn btn-default navbar-btn" type="button" name="button" ng-click="setActive($index)" value="Select"/>
-            </div>
-            <div ng-repeat='exercise in exercises'>
-                <img ng-src="{{exercise.imageUrl}}"/>
-                {{exercise.name}}
-                {{exercise.description}}
-                <input class="btn btn-default navbar-btn" type="button" name="button" ng-click="selectExercise()" value="Select"/>
-            </div>
+
+
+
+
+
             </div>
 </body>
 </html>
