added some style

--- a/public/views/createNewWorkout.html
+++ b/public/views/createNewWorkout.html
@@ -14,10 +14,10 @@
   <div ng-controller="createWorkoutController">
     <div class="jumbotron jumbotron-fluid text-center">
       <div class="container">
-        <h1>GymBuddy</h1>
+      <h1 class="tron-text">GymBuddy</h1>
       </div>
     </div>
-    <div>
+    <div class="container-fluid">
             <h1>New Workout</h1>
               <form class="form-group">
                 <label for="name"></label>
