--- a/public/views/index.html
+++ b/public/views/index.html
@@ -16,10 +16,10 @@
     <div ng-controller="indexController">
       <div class="jumbotron jumbotron-fluid text-center">
           <div class="container">
-          <h1>GymBuddy</h1>
+          <h1 class="tron-text">GymBuddy</h1>
           </div>
           </div>
-        <form class="form-signin">
+        <form class="form-signin container-fluid">
             <h2 class="form-signin-heading">Please Login</h2>
             <div>
                 <label for="username" class="sr-only">Username:</label>
