--- a/public/views/register.html
+++ b/public/views/register.html
@@ -14,7 +14,7 @@
   <div ng-controller="registerController">
     <div class="jumbotron jumbotron-fluid text-center">
     <div class="container">
-    <h1>GymBuddy</h1>
+    <h1 class="tron-text">GymBuddy</h1>
     </div>
     </div>
         <h1>Register</h1>
