--- a/public/views/viewExercise.html
+++ b/public/views/viewExercise.html
@@ -14,11 +14,13 @@
     <div ng-controller="viewExerciseController">
       <div class="jumbotron jumbotron-fluid text-center">
         <div class="container">
-          <h1>GymBuddy</h1>
+        <h1 class="tron-text">GymBuddy</h1>
         </div>
       </div>
+      <div class="container fluid">
           <h1>View Exercise XYZ </h1>
             <input  class="btn btn-danger" type="button" name="button" ng-click="home()" value="Home"/>
         </div>
+      </div>
 </body>
 </html>
