--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1,9 +1,16 @@
-/*body {
-	color: white;
-	font-family: 'Open Sans', sans-serif;
-	background-color: #212121;
-}*/
+.jumbotron.jumbotron-fluid.text-center {
+  background-color: #8B0000;
+  /*background-color: #800000;*/
+}
 
-/*.container {
-	background-color: #2E2E2E;
-}*/
+.tron-text {
+  /*color: 	#404040 !important;*/
+  color: #0d0d0d !important;
+  font-size: 425% !important;
+  font-family: "Comic Sans MS", cursive, sans-serif !important;
+  font-weight: bold !important;
+}
+
+body{
+  background-color:	#404040;
+}
