--- a/public/views/searchAPI.html
+++ b/public/views/searchAPI.html
@@ -16,15 +16,16 @@
 <div ng-controller="searchExerciseController">
   <div class="jumbotron jumbotron-fluid text-center">
     <div class="container">
-      <h1>GymBuddy</h1>
+      <h1 class="tron-text">GymBuddy</h1>
     </div>
   </div>
+  <div class="container-fluid">
         <label for="Search Exercise"></label>
         <input type="text" name="searchExercise" class="form-control" placeholder="Search Exercise" ng-model="searchExercise"/>
         <input class="btn btn-primary navbar-btn" type='button' name='search' value='Search'  ng-click='searchExerciseFunc()'/>
         <div ng-repeat="exercise in exercises|filter:searchExercise">
-            <div> Exercise Name: {{exercise.name}} </div>
-            <div> Exercise Description: {{exercise.description}} </div>
+            <div>Exercise Name: {{exercise.name}}</div>
+            <div>Exercise Description: {{exercise.description}}</div>
             <input class="btn btn-primary navbar-btn" type="button" name="button" ng-click="addtoWorkout()" value="Select"/>
         </div>
         <input class="btn btn-danger navbar-btn" type="button" name="button" value="Home" ng-click="home()"/>
