--- a/public/views/getStarted.html
+++ b/public/views/getStarted.html
@@ -20,7 +20,7 @@
             <div class="container">
             <h1 class="tron-text">GymBuddy</h1>
             </div>
-            </div>
+          </div>
         <div class="container-fluid">
             <label for="Create Workout"></label>
             <input class="btn btn-default btn-lg btn-block navbar-btn" type="button" name="createWorkout" value="Create Workout" ng-model="createWorkout" ng-click="createWorkout()"/>
@@ -36,12 +36,11 @@
                         <h4 class="modal-title">Workouts</h4>
                       </div>
                       <div class="modal-body">
-                        <div ng-repeat='workout in workouts' >
+                        <div class="modalRepeat" ng-repeat='workout in workouts' >
                             <img ng-src="{{workout.imageUrl}}"/>
                             {{workout.name}}
                             {{workout.description}}
-                            <input  class="btn btn-default navbar-btn" type="button" name="button" ng-click="setActive($index)" value="Select"/>
-                        </div>
+                            <input class="btn btn-default navbar-btn" type="button" name="button" ng-click="setActive($index)" value="Select"/>
                       </div>
                       <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -49,6 +48,8 @@
                     </div>
                   </div>
                 </div>
+              </div>
+            </div>
             <label for="View Exercise"></label>
             <input data-toggle="modal" data-target="#exerciseModal" class="btn btn-default btn-lg btn-block navbar-btn" type="button" name="viewExercise" value="View Exercise" ng-model="viewExercise" ng-click="viewExercise()"/>
             <div id="exerciseModal" class="modal fade" role="dialog">
@@ -75,6 +76,8 @@
             <label for="Search For Exercise"></label>
             <input class="btn btn-default btn-lg btn-block navbar-btn" type="button" name="searchForExercise" value="Search For Exercise" ng-model="searchForExercise" ng-click="searchForExercise()"/>
         </div>
+        <label for="Log Out"></label>
+        <input class="btn btn-danger" type="button" name="logout" value="Logout" ng-model="logout" ng-click="logout()"/>
             </div>
 </body>
 </html>
