--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1,34 +1,55 @@
-body{
-  background-color:	#404040;
+body {
+    background-color: #404040;
+    color: black;
+}
+
+div {
+  display: block;
 }
 
 .jumbotron.jumbotron-fluid.text-center {
-  /*background-color: #8B0000;*/
-  background-color: #a6a6a6;
+    /*background-color: #8B0000;*/
+    background-color: #a6a6a6;
 }
 
 .tron-text {
-  /*color: 	#404040 !important;*/
-  color: #0d0d0d !important;
-  font-size: 425% !important;
-  font-family: "Comic Sans MS", cursive, sans-serif !important;
-  font-weight: bold !important;
+    /*color: 	#404040 !important;*/
+    color: #0d0d0d !important;
+    font-size: 425% !important;
+    font-family: "Comic Sans MS", cursive, sans-serif !important;
+    font-weight: bold !important;
 }
 
 .modalRepeat {
-  /*color: #AA3939 !important;*/
-  /*background-color: #a6a6a6;*/
+    display: block;
+    color: #AA3939;
+    /*background-color: #a6a6a6;*/
 }
 
 
 /* CSS - Cascading Style Sheet */
 /* Palette color codes */
 /* Palette URL: http://paletton.com/#uid=1000u0kllllaFw0g0qFqFg0w0aF */
-
 /* As hex codes */
 
-.color-primary-0 { color: #AA3939 }	/* Main Primary color */
-.color-primary-1 { color: #FFAAAA }
-.color-primary-2 { color: #D46A6A }
-.color-primary-3 { color: #801515 }
-.color-primary-4 { color: #550000 }
+.color-primary-0 {
+    color: #AA3939
+}
+
+/* Main Primary color */
+
+.color-primary-1 {
+    color: #FFAAAA
+}
+
+.color-primary-2 {
+    color: #D46A6A
+}
+
+.color-primary-3 {
+    color: #801515
+}
+
+.color-primary-4 {
+    color: #550000
+}
