able to select individual workouts

--- a/public/views/getStarted.html
+++ b/public/views/getStarted.html
@@ -44,7 +44,7 @@
                         <div class="modal-body">
                             <div class="modalRepeat container-fluid" ng-repeat='workout in workouts'>
                                 <div>
-                                    <img ng-src="{{workout.imageUrl}}" height= 100px width= 100px/>
+                                    <img ng-src="{{workout.imageUrl}}" height= 300px width= 300x/>
                                 </div>
                                 <div>
                                     {{workout.name}}
@@ -79,7 +79,7 @@
                         <div class="modal-body">
                             <div class="modalRepeat container-fluid" ng-repeat='exercise in exercises'>
                                 <div>
-                                    <img ng-src="{{exercise.imageUrl}}"  height= 100px width= 100px/>
+                                    <img ng-src="{{exercise.imageUrl}}"  height= 300px width= 300px/>
                                 </div>
                                 <div>
                                     {{exercise.name}}
