--- a/public/views/viewExercise.html
+++ b/public/views/viewExercise.html
@@ -21,7 +21,7 @@
         </div>
         <div class="container fluid">
             <h1>View Exercise XYZ </h1>
-            <input class="btn btn-danger" type="button" name="button" ng-click="home()" value="Home" />
+            <input class="btn btn-danger" type="button" name="button" ng-click="home()" value="home"/>
         </div>
     </div>
 </body>
